txt-output/117.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: there are several ways to fix the program. No oracle given.                
f x = if x then x+1 else x                              

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\117.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\117.hs:6:18:
    No instance for (Num Bool)
      arising from the literal `1' at ill-typed\117.hs:6:18
    Possible fix: add an instance declaration for (Num Bool)
    In the second argument of `(+)', namely `1'
    In the expression: x + 1
    In the expression: if x then x + 1 else x


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\117.hs, ill-typed\117.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\117.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\117.hs:6:18: error:
    * No instance for (Num Bool) arising from a use of `+'
    * In the expression: x + 1
      In the expression: if x then x + 1 else x
      In an equation for `f': f x = if x then x + 1 else x
  |
6 | f x = if x then x+1 else x                              
  |                  ^
